// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primitive Class Should inspect Array 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "concat",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "copyWithin",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "fill",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "find",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "findIndex",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "lastIndexOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "pop",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "push",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "reverse",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "shift",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "unshift",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "slice",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "sort",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "splice",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "includes",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "indexOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "join",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "keys",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "entries",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "values",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "forEach",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "filter",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "flat",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "flatMap",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "map",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "every",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "some",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "reduce",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "reduceRight",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "at",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isArray",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "from",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "of",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "Array",
  "properties": Array [],
  "super": Object,
  "type": Array,
  "typeClassification": "Class",
}
`;

exports[`Primitive Class Should inspect Boolean 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "valueOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "Boolean",
  "properties": Array [],
  "super": Object,
  "type": Boolean,
  "typeClassification": "Class",
}
`;

exports[`Primitive Class Should inspect Date 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toDateString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toTimeString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toISOString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toUTCString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toGMTString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getDate",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setDate",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getDay",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getFullYear",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setFullYear",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getHours",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setHours",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getMilliseconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setMilliseconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getMinutes",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setMinutes",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getMonth",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setMonth",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getSeconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setSeconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getTime",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setTime",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getTimezoneOffset",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCDate",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setUTCDate",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCDay",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCFullYear",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setUTCFullYear",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCHours",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setUTCHours",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCMilliseconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setUTCMilliseconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCMinutes",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setUTCMinutes",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCMonth",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setUTCMonth",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getUTCSeconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setUTCSeconds",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "valueOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "getYear",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "setYear",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toJSON",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleDateString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleTimeString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "now",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "parse",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "UTC",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "Date",
  "properties": Array [],
  "super": Object,
  "type": Date,
  "typeClassification": "Class",
}
`;

exports[`Primitive Class Should inspect Number 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toExponential",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toFixed",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toPrecision",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "valueOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isFinite",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isInteger",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isNaN",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isSafeInteger",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "parseFloat",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "parseInt",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "Number",
  "properties": Array [],
  "super": Object,
  "type": Number,
  "typeClassification": "Class",
}
`;

exports[`Primitive Class Should inspect Object 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "hasOwnProperty",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "isPrototypeOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "propertyIsEnumerable",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "valueOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "assign",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "getOwnPropertyDescriptor",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "getOwnPropertyDescriptors",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "getOwnPropertyNames",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "getOwnPropertySymbols",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "is",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "preventExtensions",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "seal",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "create",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "defineProperties",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "defineProperty",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "freeze",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "getPrototypeOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "setPrototypeOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isExtensible",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isFrozen",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "isSealed",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "keys",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "entries",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "fromEntries",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "values",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "hasOwn",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "Object",
  "properties": Array [],
  "super": Object,
  "type": Object,
  "typeClassification": "Class",
}
`;

exports[`Primitive Class Should inspect Promise 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "then",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "catch",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "finally",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "all",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "allSettled",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "any",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "race",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "resolve",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "reject",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "Promise",
  "properties": Array [],
  "super": Object,
  "type": Promise,
  "typeClassification": "Class",
}
`;

exports[`Primitive Class Should inspect String 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "anchor",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "big",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "blink",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "bold",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "charAt",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "charCodeAt",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "codePointAt",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "concat",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "endsWith",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "fontcolor",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "fontsize",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "fixed",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "includes",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "indexOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "italics",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "lastIndexOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "link",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "localeCompare",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "match",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "matchAll",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "normalize",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "padEnd",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "padStart",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "repeat",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "replace",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "replaceAll",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "search",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "slice",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "small",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "split",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "strike",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "sub",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "substr",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "substring",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "sup",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "startsWith",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toString",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "trim",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "trimStart",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "trimLeft",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "trimEnd",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "trimRight",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleLowerCase",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLocaleUpperCase",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toLowerCase",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "toUpperCase",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "valueOf",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "at",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "fromCharCode",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "fromCodePoint",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "StaticMethod",
      "name": "raw",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "String",
  "properties": Array [],
  "super": Object,
  "type": String,
  "typeClassification": "Class",
}
`;
